# SoftDesPy_Assignment_1

./: README.md  pyproject.toml
plugins/: toy_example.py
src/: app.py  op.py  plugin.py  runner.py
